# BlueRov_ROS2_Gstreamer

./: README.md
bluerov_driver/: CMakeLists.txt  package.xml
bluerov_driver/launch/: video_launch.py
bluerov_driver/params/: Submarine-4.1.1-STABLE-20240705-101922.params
bluerov_driver/src/: bluerov_node.cpp  video.cpp
