<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluerov_driver</name>
  <version>0.0.0</version>
  <description>A bluerov2 driver</description>
  <maintainer email="danieleneh024@gmail.com">daniel</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <build_depend>mavros</build_depend>
  <depend>mavros_msgs</depend>
  <!--<depend>mavlink</depend>
  <exec_depend>mavconn</exec_depend> -->
  




  <!-- OpenCV -->
  <depend>opencv</depend>

  <!-- JSON library -->
  <depend>nlohmann_json</depend>

  <!-- System dependencies -->
  <exec_depend>libgstreamer1.0-dev</exec_depend>
  <exec_depend>libgstreamer-plugins-base1.0-dev</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <!--<exec_depend>mavros</exec_depend>
  <exec_depend>mavconn</exec_depend>-->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
